Heri | #2178: Fixing GPS field alignment

--- a/datawinners/media/css/scss/section_datasenders_common.scss
+++ b/datawinners/media/css/scss/section_datasenders_common.scss
@@ -66,8 +66,19 @@ li.instruction_text {
   width: 350px;
 }
 
-#registration_form fieldset > ul > li:last-child{
-    text-align: right;
-    margin-right: 377px;
-    width: 534px;
+#registration_form fieldset > ul {
+    width: 918px;
+    > li:last-child{
+        text-align: right;
+        margin-right: 377px;
+        width: 534px;
+    }
+    li {
+        .find_gps_en{
+            padding-left: 101px;
+        }
+        .find_gps_fr{
+            padding-left: 54px;
+        }
+    }
 }
